separated the student schedule class